# pytest_proj

./: pyproject.toml
tests/: test_arrs.py
