[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["alexeylitvinov <alextwin1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.develop.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
